# HP200Printer

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-libs.cpp  native-lib.cpp
app/src/main/java/com/kangear/mtm/: Jni.java  MainActivity.java  Printer.java
app/src/main/java/com/kangear/mtm/ipp/: FindServicesNSD.java  HttpIppClientTransport.java  IppPrinter.java
app/src/main/java/com/kangear/mtm/printservice/: CustomPrintOptionsActivity.java  MyDialogActivity.java  MyPrintService.java  SettingsActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/xml/: printservice.xml
